--- a/RoadWarrior/Onboarding.storyboard
+++ b/RoadWarrior/Onboarding.storyboard
@@ -21,7 +21,7 @@
         <!--Walkthrough View Controller-->
         <scene sceneID="Nye-Ej-2z3">
             <objects>
-                <viewController storyboardIdentifier="WalkthroughViewController" id="mKO-5V-1e4" customClass="WalkthroughViewController" customModule="Cafegram2EN" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WalkthroughViewController" id="mKO-5V-1e4" customClass="WalkthroughViewController" customModule="RoadWarrior" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zsk-gu-2P2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -104,7 +104,7 @@
         <!--Walkthrough Page View Controller-->
         <scene sceneID="EK1-IS-V9k">
             <objects>
-                <pageViewController storyboardIdentifier="WalkthroughPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="tGn-Rf-fPS" customClass="WalkthroughPageViewController" customModule="Cafegram2EN" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController storyboardIdentifier="WalkthroughPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="tGn-Rf-fPS" customClass="WalkthroughPageViewController" customModule="RoadWarrior" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rry-c0-7U7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-66" y="140"/>
@@ -112,13 +112,13 @@
         <!--Walkthrough Content View Controller-->
         <scene sceneID="M2U-i7-yLJ">
             <objects>
-                <viewController storyboardIdentifier="WalkthroughContentViewController" id="UPb-qa-BEt" customClass="WalkthroughContentViewController" customModule="Cafegram2EN" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WalkthroughContentViewController" id="UPb-qa-BEt" customClass="WalkthroughContentViewController" customModule="RoadWarrior" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HpP-4e-0qi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="451"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="flc-wn-Ci4">
-                                <rect key="frame" x="24" y="50" width="327" height="328.5"/>
+                                <rect key="frame" x="24" y="50" width="327" height="328"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eWo-ft-3Tw">
                                         <rect key="frame" x="0.0" y="0.0" width="327" height="229"/>
@@ -127,16 +127,16 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="JZd-qo-6k0">
-                                        <rect key="frame" x="119" y="279" width="89.5" height="49.5"/>
+                                        <rect key="frame" x="120.5" y="279" width="86" height="49"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEADING" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Axf-l9-kbt">
-                                                <rect key="frame" x="5.5" y="0.0" width="78.5" height="20.5"/>
+                                                <rect key="frame" x="5.5" y="0.0" width="75.5" height="20"/>
                                                 <fontDescription key="fontDescription" name="Rubik-Bold" family="Rubik" pointSize="17"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subheading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1M-Am-jtM">
-                                                <rect key="frame" x="0.0" y="30.5" width="89.5" height="19"/>
+                                                <rect key="frame" x="0.0" y="30" width="86" height="19"/>
                                                 <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="16"/>
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
